integration_tests/src/snapshots/integration_tests__regular_nft_tests__requested_non_fungibles_are_non_fungibles.snap
---
source: integration_tests/src/regular_nft_tests.rs
expression: response
---
{
  "total": 5,
  "grand_total": 5,
  "limit": 500,
  "items": [
    {
      "interface": "V1_NFT",
      "id": "DvpMQyF8sT6hPBewQf6VrVESw6L1zewPyNit1CSt1tDJ",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://nftstorage.link/ipfs/bafkreigq3rvy636lvj23tid5ioxd4ovtcivfbhhjst5hk7fhziedygew3a",
        "files": [],
        "metadata": {
          "name": "LIBRE",
          "symbol": "LIBRE"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "EcxjN4mea6Ah9WSqZhLtSJJCZcxY73Vaz6UVHFZZ5Ttz"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": null
      },
      "mutable": true,
      "burnt": false,
      "mint_extensions": {
        "metadata_pointer": {
          "metadata_address": "DvpMQyF8sT6hPBewQf6VrVESw6L1zewPyNit1CSt1tDJ"
        },
        "metadata": {
          "update_authority": "2jL7yFGXkKE9oi1xHsA45UzV5491PD55AugGJiTbUr9m",
          "mint": "DvpMQyF8sT6hPBewQf6VrVESw6L1zewPyNit1CSt1tDJ",
          "name": "LIBRE",
          "symbol": "LIBRE",
          "uri": "https://nftstorage.link/ipfs/bafkreigq3rvy636lvj23tid5ioxd4ovtcivfbhhjst5hk7fhziedygew3a",
          "additional_metadata": []
        },
        "group_member_pointer": {
          "member_address": "DvpMQyF8sT6hPBewQf6VrVESw6L1zewPyNit1CSt1tDJ"
        }
      },
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
        "freeze_authority": "2jL7yFGXkKE9oi1xHsA45UzV5491PD55AugGJiTbUr9m"
      }
    },
    {
      "interface": "V1_NFT",
      "id": "9qA21TR9QTsQeR5sP6L2PytjgxXcVRSyqUY5vRcUogom",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://api.akord.com/files/5d0e6fa5-01dc-4893-a2d7-64be4d576449",
        "files": [],
        "metadata": {
          "name": "backpack.eclipse",
          "symbol": "SN"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "EcxjN4mea6Ah9WSqZhLtSJJCZcxY73Vaz6UVHFZZ5Ttz"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": null
      },
      "mutable": true,
      "burnt": false,
      "mint_extensions": {
        "metadata_pointer": {
          "metadata_address": "9qA21TR9QTsQeR5sP6L2PytjgxXcVRSyqUY5vRcUogom"
        },
        "metadata": {
          "update_authority": "6qVNPWh4Qhr6pBVZQMNpxwn477rg5LUkjBFuG5KpZvJc",
          "mint": "9qA21TR9QTsQeR5sP6L2PytjgxXcVRSyqUY5vRcUogom",
          "name": "backpack.eclipse",
          "symbol": "SN",
          "uri": "https://api.akord.com/files/5d0e6fa5-01dc-4893-a2d7-64be4d576449",
          "additional_metadata": []
        },
        "group_member_pointer": {
          "member_address": "9qA21TR9QTsQeR5sP6L2PytjgxXcVRSyqUY5vRcUogom"
        }
      },
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb"
      }
    },
    {
      "interface": "V1_NFT",
      "id": "8WKGo1z9k3PjTsQw5GDQmvAbKwuRGtb4APkCneH8AVY1",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://nftstorage.link/ipfs/bafkreigq3rvy636lvj23tid5ioxd4ovtcivfbhhjst5hk7fhziedygew3a",
        "files": [],
        "metadata": {
          "name": "LIBRE",
          "symbol": "LIBRE"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "EcxjN4mea6Ah9WSqZhLtSJJCZcxY73Vaz6UVHFZZ5Ttz"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": null
      },
      "mutable": true,
      "burnt": false,
      "mint_extensions": {
        "metadata_pointer": {
          "metadata_address": "8WKGo1z9k3PjTsQw5GDQmvAbKwuRGtb4APkCneH8AVY1"
        },
        "metadata": {
          "update_authority": "2jL7yFGXkKE9oi1xHsA45UzV5491PD55AugGJiTbUr9m",
          "mint": "8WKGo1z9k3PjTsQw5GDQmvAbKwuRGtb4APkCneH8AVY1",
          "name": "LIBRE",
          "symbol": "LIBRE",
          "uri": "https://nftstorage.link/ipfs/bafkreigq3rvy636lvj23tid5ioxd4ovtcivfbhhjst5hk7fhziedygew3a",
          "additional_metadata": []
        },
        "group_member_pointer": {
          "member_address": "8WKGo1z9k3PjTsQw5GDQmvAbKwuRGtb4APkCneH8AVY1"
        }
      },
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
        "freeze_authority": "2jL7yFGXkKE9oi1xHsA45UzV5491PD55AugGJiTbUr9m"
      }
    },
    {
      "interface": "V1_NFT",
      "id": "7ZkXycbrAhVzeB9ngnjcCdjk5bxTJYzscSZMhRRBx3QB",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "ipfs://QmTmNdx3cNT4wv5yyi7ajvPLZTVia6QzWzg1AAkKtauqqs",
        "files": [],
        "metadata": {
          "name": "Path of Discovery",
          "symbol": "POD"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "EcxjN4mea6Ah9WSqZhLtSJJCZcxY73Vaz6UVHFZZ5Ttz"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": null
      },
      "mutable": true,
      "burnt": false,
      "mint_extensions": {
        "metadata_pointer": {
          "metadata_address": "7ZkXycbrAhVzeB9ngnjcCdjk5bxTJYzscSZMhRRBx3QB"
        },
        "metadata": {
          "update_authority": "6wBjjwmWAZzuzAYt9N7EbhPsthE6m2LStNAxZUbViqQb",
          "mint": "7ZkXycbrAhVzeB9ngnjcCdjk5bxTJYzscSZMhRRBx3QB",
          "name": "Path of Discovery",
          "symbol": "POD",
          "uri": "ipfs://QmTmNdx3cNT4wv5yyi7ajvPLZTVia6QzWzg1AAkKtauqqs",
          "additional_metadata": [
            [
              "royalty_basis_points",
              "5000"
            ],
            [
              "AsSKqK7CkxFUf3KaoQzzr8ZLPm5fFguUtVE5QwGALQQn",
              "100"
            ]
          ]
        },
        "group_member_pointer": {
          "member_address": "7ZkXycbrAhVzeB9ngnjcCdjk5bxTJYzscSZMhRRBx3QB"
        }
      },
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
        "freeze_authority": "6wBjjwmWAZzuzAYt9N7EbhPsthE6m2LStNAxZUbViqQb"
      }
    },
    {
      "interface": "V1_NFT",
      "id": "75peBtH5MwfA5t9uhr51AYL7MR5DbPJ5xQ7wizzvowUH",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://s3.filebase.com/eclipsedomains/eclipse-item.json",
        "files": [],
        "metadata": {
          "name": "backpack.eclipse",
          "symbol": "ED"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "EcxjN4mea6Ah9WSqZhLtSJJCZcxY73Vaz6UVHFZZ5Ttz"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": null
      },
      "mutable": true,
      "burnt": false,
      "mint_extensions": {
        "permanent_delegate": {
          "delegate": "8JGNPBnUFHyjtzF8h9orj7fWNRLJBbvJZvZB2nwjE4Zo"
        },
        "metadata_pointer": {
          "metadata_address": "75peBtH5MwfA5t9uhr51AYL7MR5DbPJ5xQ7wizzvowUH"
        },
        "metadata": {
          "update_authority": "8JGNPBnUFHyjtzF8h9orj7fWNRLJBbvJZvZB2nwjE4Zo",
          "mint": "75peBtH5MwfA5t9uhr51AYL7MR5DbPJ5xQ7wizzvowUH",
          "name": "backpack.eclipse",
          "symbol": "ED",
          "uri": "https://s3.filebase.com/eclipsedomains/eclipse-item.json",
          "additional_metadata": [
            [
              "royalty_basis_points",
              "500"
            ],
            [
              "FBepPeUcmFupjK7rWonB5gKtjT16AbExnhSVC1bBPAqf",
              "100"
            ],
            [
              "expiration_date",
              "1765018176"
            ],
            [
              "domain",
              "backpack.eclipse"
            ],
            [
              "extension",
              "eclipse"
            ],
            [
              "length",
              "8"
            ],
            [
              "created_at",
              "1733482176"
            ],
            [
              "updated_at",
              "1735340757"
            ]
          ]
        },
        "group_member_pointer": {
          "member_address": "EdmnsgHGEeeBoGEhtK4th6L3ebmfzfR9Lvw9oi9t4nnL"
        }
      },
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
        "freeze_authority": "8JGNPBnUFHyjtzF8h9orj7fWNRLJBbvJZvZB2nwjE4Zo"
      }
    }
  ],
  "cursor": "75peBtH5MwfA5t9uhr51AYL7MR5DbPJ5xQ7wizzvowUH"
}
